--- a/pages/blog/blogs/blog-post.css
+++ b/pages/blog/blogs/blog-post.css
@@ -1,50 +1,74 @@
 /* Custom CSS for blog post page */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
+  font-family: source-serif-pro, Georgia, Cambria, "Times New Roman", Times, serif;
+  background-color: #ffffff;
+  margin: 0; /* Add this to remove default margin */
+  padding: 0; /* Add this to remove default padding */
+}
+
+.p1{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #242424;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 52px;
+  letter-spacing: -0.011em;
+}
+
+.contain-text{
+  width: 80%; /* Set the width of the container */
+  margin-left: auto; /* Align container to the center */
+  margin-right: auto; /* Align container to the center */
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+#bimg{
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.code{
+  background-color: #242424;
+  color: white;
+  font-family: monospace;
+  padding: 1%;
+}
+
+.container-img{
+  width: 100%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  border: none;
+}
+
+.btn-secondary:hover {
+  background-color: #5a6268;
+}
+
+footer {
+  padding: 20px 0;
+  color: #666;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .contain-text{
+    width: 100%;
   }
-  
-  .card {
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card-title {
-    color: #333;
-  }
-  
-  .card-text {
-    color: #666;
-  }
-  
-  .btn-primary {
-    background-color: #007bff;
-    border: none;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0056b3;
-  }
-  
-  .btn-secondary {
-    background-color: #6c757d;
-    border: none;
-  }
-  
-  .btn-secondary:hover {
-    background-color: #5a6268;
-  }
-  
-  footer {
-    padding: 20px 0;
-    color: #666;
-  }
-  
-  /* Responsive styles */
-  @media (max-width: 768px) {
-    .card {
-      margin-top: 20px;
-    }
-  }
-  
+}
